--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,10 +32,12 @@
     <LinearLayout
         android:id="@+id/canvasToolsLayout"
         android:layout_width="40dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="110dp"
         android:layout_marginRight="1dp"
+        android:layout_marginBottom="89dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/textEditorLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/artboardLayout">
 
@@ -43,16 +45,16 @@
             android:id="@+id/drawButton"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#4E75C2"
+            android:background="@drawable/rect_circular_button"
             android:contentDescription="draw"
-            android:tint="#FFFFFF"
-            app:srcCompat="@drawable/pencil_icon" />
+            app:srcCompat="@drawable/pencil_icon"
+            app:tint="#FFFFFF" />
 
         <ImageButton
             android:id="@+id/eraseButton"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#4E75C2"
+            android:background="@drawable/rect_circular_button"
             android:contentDescription="erase"
             android:tint="#FFFFFF"
             app:srcCompat="@drawable/eraser_icon" />
@@ -61,7 +63,7 @@
             android:id="@+id/clearButton"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#4E75C1"
+            android:background="@drawable/rect_circular_button"
             android:contentDescription="clear"
             android:tint="#FFFFFF"
             app:srcCompat="@drawable/delete_icon" />
@@ -104,6 +106,7 @@
             android:layout_weight="1"
             android:text="Text Editor"
             android:textColor="#FFFFFF" />
+
     </LinearLayout>
 
     <EditText
@@ -124,52 +127,57 @@
     <LinearLayout
         android:id="@+id/textEditorToolsLayout"
         android:layout_width="40dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="80dp"
         android:layout_marginRight="1dp"
+        android:layout_marginBottom="96dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/symbolicLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textEditorLayout">
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/copyButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#4E75C1"
+            android:background="@drawable/rect_circular_button"
             android:contentDescription="copy"
             android:minHeight="48dp"
             android:tint="#FFFFFF"
             app:srcCompat="?attr/actionModeCopyDrawable" />
 
         <ImageButton
-            android:id="@+id/imageButton4"
+            android:id="@+id/cutButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#4E75C1"
+            android:background="@drawable/rect_circular_button"
             android:contentDescription="cut"
             android:minHeight="48dp"
             android:tint="#FFFFFF"
             app:srcCompat="?attr/actionModeCutDrawable" />
 
         <ImageButton
-            android:id="@+id/imageButton11"
+            android:id="@+id/clearTextButton"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#4E75C1"
-            android:contentDescription="paste"
-            android:tint="#FFFFFF"
-            app:srcCompat="@drawable/paste_outline_icon" />
-
-        <ImageButton
-            android:id="@+id/imageButton13"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="#4E75C0"
-            android:contentDescription="delete"
+            android:background="@drawable/rect_circular_button"
+            android:contentDescription="clear"
             android:tint="#FFFFFF"
             app:srcCompat="@drawable/backspace_icon" />
 
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/compileButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/circular_image_button"
+        android:padding="10dp"
+        android:tint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/artboardLayout"
+        app:srcCompat="@drawable/customizable_icon" />
 
     <LinearLayout
         android:id="@+id/symbolicLayout"
