--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -203,6 +203,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/symbolicLayout"
         app:layout_constraintEnd_toStartOf="@+id/textEditorToolsLayout"
         app:layout_constraintStart_toStartOf="parent"
